parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     program -> error
Rule 4     statement -> INTEGER command NEWLINE
Rule 5     statement -> RUN NEWLINE
Rule 6     statement -> LIST NEWLINE
Rule 7     statement -> NEW NEWLINE
Rule 8     statement -> INTEGER NEWLINE
Rule 9     statement -> INTEGER error NEWLINE
Rule 10    statement -> NEWLINE
Rule 11    command -> LET variable EQUALS expr
Rule 12    command -> LET variable EQUALS error
Rule 13    command -> READ varlist
Rule 14    command -> READ error
Rule 15    command -> DATA numlist
Rule 16    command -> DATA error
Rule 17    command -> PRINT plist optend
Rule 18    command -> OUT expr EQUALS plist
Rule 19    command -> DELAY expr
Rule 20    command -> LETSTR variable EQUALS plist
Rule 21    command -> READDATA variable EQUALS plist
Rule 22    command -> READSTR variable EQUALS plist
Rule 23    command -> CHECK plist
Rule 24    command -> PRINT error
Rule 25    optend -> COMMA
Rule 26    optend -> SEMI
Rule 27    optend -> <empty>
Rule 28    command -> PRINT
Rule 29    command -> GOTO INTEGER
Rule 30    command -> GOTO error
Rule 31    command -> IF relexpr THEN INTEGER
Rule 32    command -> IF error THEN INTEGER
Rule 33    command -> IF relexpr THEN error
Rule 34    command -> FOR ID EQUALS expr TO expr optstep
Rule 35    command -> FOR ID EQUALS error TO expr optstep
Rule 36    command -> FOR ID EQUALS expr TO error optstep
Rule 37    command -> FOR ID EQUALS expr TO expr STEP error
Rule 38    optstep -> STEP expr
Rule 39    optstep -> empty
Rule 40    command -> NEXT ID
Rule 41    command -> NEXT error
Rule 42    command -> END
Rule 43    command -> REM
Rule 44    command -> STOP
Rule 45    command -> DEF ID LPAREN ID RPAREN EQUALS expr
Rule 46    command -> DEF ID LPAREN ID RPAREN EQUALS error
Rule 47    command -> DEF ID LPAREN error RPAREN EQUALS expr
Rule 48    command -> GOSUB INTEGER
Rule 49    command -> GOSUB error
Rule 50    command -> RETURN
Rule 51    command -> DIM dimlist
Rule 52    command -> DIM error
Rule 53    dimlist -> dimlist COMMA dimitem
Rule 54    dimlist -> dimitem
Rule 55    dimitem -> ID LPAREN INTEGER RPAREN
Rule 56    dimitem -> ID LPAREN INTEGER COMMA INTEGER RPAREN
Rule 57    expr -> expr PLUS expr
Rule 58    expr -> expr MINUS expr
Rule 59    expr -> expr TIMES expr
Rule 60    expr -> expr DIVIDE expr
Rule 61    expr -> expr POWER expr
Rule 62    expr -> INTEGER
Rule 63    expr -> FLOAT
Rule 64    expr -> variable
Rule 65    expr -> LPAREN expr RPAREN
Rule 66    expr -> MINUS expr
Rule 67    relexpr -> expr LT expr
Rule 68    relexpr -> expr LE expr
Rule 69    relexpr -> expr GT expr
Rule 70    relexpr -> expr GE expr
Rule 71    relexpr -> expr EQUALS expr
Rule 72    relexpr -> expr NE expr
Rule 73    variable -> ID
Rule 74    variable -> ID LPAREN expr RPAREN
Rule 75    variable -> ID LPAREN expr COMMA expr RPAREN
Rule 76    varlist -> varlist COMMA variable
Rule 77    varlist -> variable
Rule 78    numlist -> numlist COMMA number
Rule 79    numlist -> number
Rule 80    number -> INTEGER
Rule 81    number -> FLOAT
Rule 82    number -> MINUS INTEGER
Rule 83    number -> MINUS FLOAT
Rule 84    plist -> plist COMMA pitem
Rule 85    plist -> pitem
Rule 86    pitem -> STRING
Rule 87    pitem -> STRING expr
Rule 88    pitem -> expr
Rule 89    empty -> <empty>

Terminals, with rules where they appear

CHECK                : 23
COMMA                : 25 53 56 75 76 78 84
DATA                 : 15 16
DEF                  : 45 46 47
DELAY                : 19
DIM                  : 51 52
DIVIDE               : 60
END                  : 42
EQUALS               : 11 12 18 20 21 22 34 35 36 37 45 46 47 71
FLOAT                : 63 81 83
FOR                  : 34 35 36 37
GE                   : 70
GOSUB                : 48 49
GOTO                 : 29 30
GT                   : 69
ID                   : 34 35 36 37 40 45 45 46 46 47 55 56 73 74 75
IF                   : 31 32 33
INTEGER              : 4 8 9 29 31 32 48 55 56 56 62 80 82
LE                   : 68
LET                  : 11 12
LETSTR               : 20
LIST                 : 6
LPAREN               : 45 46 47 55 56 65 74 75
LT                   : 67
MINUS                : 58 66 82 83
NE                   : 72
NEW                  : 7
NEWLINE              : 4 5 6 7 8 9 10
NEXT                 : 40 41
OUT                  : 18
PLUS                 : 57
POWER                : 61
PRINT                : 17 24 28
READ                 : 13 14
READDATA             : 21
READSTR              : 22
REM                  : 43
RETURN               : 50
RPAREN               : 45 46 47 55 56 65 74 75
RUN                  : 5
SEMI                 : 26
STEP                 : 37 38
STOP                 : 44
STRING               : 86 87
THEN                 : 31 32 33
TIMES                : 59
TO                   : 34 35 36 37
error                : 3 9 12 14 16 24 30 32 33 35 36 37 41 46 47 49 52

Nonterminals, with rules where they appear

command              : 4
dimitem              : 53 54
dimlist              : 51 53
empty                : 39
expr                 : 11 18 19 34 34 35 36 37 37 38 45 47 57 57 58 58 59 59 60 60 61 61 65 66 67 67 68 68 69 69 70 70 71 71 72 72 74 75 75 87 88
number               : 78 79
numlist              : 15 78
optend               : 17
optstep              : 34 35 36
pitem                : 84 85
plist                : 17 18 20 21 22 23 84
program              : 1 0
relexpr              : 31 33
statement            : 1 2
variable             : 11 12 20 21 22 64 76 77
varlist              : 13 76

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) program -> . error
    (4) statement -> . INTEGER command NEWLINE
    (5) statement -> . RUN NEWLINE
    (6) statement -> . LIST NEWLINE
    (7) statement -> . NEW NEWLINE
    (8) statement -> . INTEGER NEWLINE
    (9) statement -> . INTEGER error NEWLINE
    (10) statement -> . NEWLINE

    error           shift and go to state 7
    INTEGER         shift and go to state 8
    RUN             shift and go to state 2
    LIST            shift and go to state 4
    NEW             shift and go to state 1
    NEWLINE         shift and go to state 3

    program                        shift and go to state 5
    statement                      shift and go to state 6

state 1

    (7) statement -> NEW . NEWLINE

    NEWLINE         shift and go to state 9


state 2

    (5) statement -> RUN . NEWLINE

    NEWLINE         shift and go to state 10


state 3

    (10) statement -> NEWLINE .

    INTEGER         reduce using rule 10 (statement -> NEWLINE .)
    RUN             reduce using rule 10 (statement -> NEWLINE .)
    LIST            reduce using rule 10 (statement -> NEWLINE .)
    NEW             reduce using rule 10 (statement -> NEWLINE .)
    NEWLINE         reduce using rule 10 (statement -> NEWLINE .)
    $end            reduce using rule 10 (statement -> NEWLINE .)


state 4

    (6) statement -> LIST . NEWLINE

    NEWLINE         shift and go to state 11


state 5

    (0) S' -> program .
    (1) program -> program . statement
    (4) statement -> . INTEGER command NEWLINE
    (5) statement -> . RUN NEWLINE
    (6) statement -> . LIST NEWLINE
    (7) statement -> . NEW NEWLINE
    (8) statement -> . INTEGER NEWLINE
    (9) statement -> . INTEGER error NEWLINE
    (10) statement -> . NEWLINE

    INTEGER         shift and go to state 8
    RUN             shift and go to state 2
    LIST            shift and go to state 4
    NEW             shift and go to state 1
    NEWLINE         shift and go to state 3

    statement                      shift and go to state 12

state 6

    (2) program -> statement .

    INTEGER         reduce using rule 2 (program -> statement .)
    RUN             reduce using rule 2 (program -> statement .)
    LIST            reduce using rule 2 (program -> statement .)
    NEW             reduce using rule 2 (program -> statement .)
    NEWLINE         reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 7

    (3) program -> error .

    INTEGER         reduce using rule 3 (program -> error .)
    RUN             reduce using rule 3 (program -> error .)
    LIST            reduce using rule 3 (program -> error .)
    NEW             reduce using rule 3 (program -> error .)
    NEWLINE         reduce using rule 3 (program -> error .)
    $end            reduce using rule 3 (program -> error .)


state 8

    (4) statement -> INTEGER . command NEWLINE
    (8) statement -> INTEGER . NEWLINE
    (9) statement -> INTEGER . error NEWLINE
    (11) command -> . LET variable EQUALS expr
    (12) command -> . LET variable EQUALS error
    (13) command -> . READ varlist
    (14) command -> . READ error
    (15) command -> . DATA numlist
    (16) command -> . DATA error
    (17) command -> . PRINT plist optend
    (18) command -> . OUT expr EQUALS plist
    (19) command -> . DELAY expr
    (20) command -> . LETSTR variable EQUALS plist
    (21) command -> . READDATA variable EQUALS plist
    (22) command -> . READSTR variable EQUALS plist
    (23) command -> . CHECK plist
    (24) command -> . PRINT error
    (28) command -> . PRINT
    (29) command -> . GOTO INTEGER
    (30) command -> . GOTO error
    (31) command -> . IF relexpr THEN INTEGER
    (32) command -> . IF error THEN INTEGER
    (33) command -> . IF relexpr THEN error
    (34) command -> . FOR ID EQUALS expr TO expr optstep
    (35) command -> . FOR ID EQUALS error TO expr optstep
    (36) command -> . FOR ID EQUALS expr TO error optstep
    (37) command -> . FOR ID EQUALS expr TO expr STEP error
    (40) command -> . NEXT ID
    (41) command -> . NEXT error
    (42) command -> . END
    (43) command -> . REM
    (44) command -> . STOP
    (45) command -> . DEF ID LPAREN ID RPAREN EQUALS expr
    (46) command -> . DEF ID LPAREN ID RPAREN EQUALS error
    (47) command -> . DEF ID LPAREN error RPAREN EQUALS expr
    (48) command -> . GOSUB INTEGER
    (49) command -> . GOSUB error
    (50) command -> . RETURN
    (51) command -> . DIM dimlist
    (52) command -> . DIM error

    NEWLINE         shift and go to state 23
    error           shift and go to state 36
    LET             shift and go to state 34
    READ            shift and go to state 15
    DATA            shift and go to state 22
    PRINT           shift and go to state 19
    OUT             shift and go to state 28
    DELAY           shift and go to state 17
    LETSTR          shift and go to state 35
    READDATA        shift and go to state 24
    READSTR         shift and go to state 32
    CHECK           shift and go to state 27
    GOTO            shift and go to state 31
    IF              shift and go to state 33
    FOR             shift and go to state 21
    NEXT            shift and go to state 25
    END             shift and go to state 30
    REM             shift and go to state 18
    STOP            shift and go to state 16
    DEF             shift and go to state 20
    GOSUB           shift and go to state 29
    RETURN          shift and go to state 13
    DIM             shift and go to state 14

    command                        shift and go to state 26

state 9

    (7) statement -> NEW NEWLINE .

    INTEGER         reduce using rule 7 (statement -> NEW NEWLINE .)
    RUN             reduce using rule 7 (statement -> NEW NEWLINE .)
    LIST            reduce using rule 7 (statement -> NEW NEWLINE .)
    NEW             reduce using rule 7 (statement -> NEW NEWLINE .)
    NEWLINE         reduce using rule 7 (statement -> NEW NEWLINE .)
    $end            reduce using rule 7 (statement -> NEW NEWLINE .)


state 10

    (5) statement -> RUN NEWLINE .

    INTEGER         reduce using rule 5 (statement -> RUN NEWLINE .)
    RUN             reduce using rule 5 (statement -> RUN NEWLINE .)
    LIST            reduce using rule 5 (statement -> RUN NEWLINE .)
    NEW             reduce using rule 5 (statement -> RUN NEWLINE .)
    NEWLINE         reduce using rule 5 (statement -> RUN NEWLINE .)
    $end            reduce using rule 5 (statement -> RUN NEWLINE .)


state 11

    (6) statement -> LIST NEWLINE .

    INTEGER         reduce using rule 6 (statement -> LIST NEWLINE .)
    RUN             reduce using rule 6 (statement -> LIST NEWLINE .)
    LIST            reduce using rule 6 (statement -> LIST NEWLINE .)
    NEW             reduce using rule 6 (statement -> LIST NEWLINE .)
    NEWLINE         reduce using rule 6 (statement -> LIST NEWLINE .)
    $end            reduce using rule 6 (statement -> LIST NEWLINE .)


state 12

    (1) program -> program statement .

    INTEGER         reduce using rule 1 (program -> program statement .)
    RUN             reduce using rule 1 (program -> program statement .)
    LIST            reduce using rule 1 (program -> program statement .)
    NEW             reduce using rule 1 (program -> program statement .)
    NEWLINE         reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 13

    (50) command -> RETURN .

    NEWLINE         reduce using rule 50 (command -> RETURN .)


state 14

    (51) command -> DIM . dimlist
    (52) command -> DIM . error
    (53) dimlist -> . dimlist COMMA dimitem
    (54) dimlist -> . dimitem
    (55) dimitem -> . ID LPAREN INTEGER RPAREN
    (56) dimitem -> . ID LPAREN INTEGER COMMA INTEGER RPAREN

    error           shift and go to state 39
    ID              shift and go to state 40

    dimitem                        shift and go to state 37
    dimlist                        shift and go to state 38

state 15

    (13) command -> READ . varlist
    (14) command -> READ . error
    (76) varlist -> . varlist COMMA variable
    (77) varlist -> . variable
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    error           shift and go to state 42
    ID              shift and go to state 44

    varlist                        shift and go to state 41
    variable                       shift and go to state 43

state 16

    (44) command -> STOP .

    NEWLINE         reduce using rule 44 (command -> STOP .)


state 17

    (19) command -> DELAY . expr
    (57) expr -> . expr PLUS expr
    (58) expr -> . expr MINUS expr
    (59) expr -> . expr TIMES expr
    (60) expr -> . expr DIVIDE expr
    (61) expr -> . expr POWER expr
    (62) expr -> . INTEGER
    (63) expr -> . FLOAT
    (64) expr -> . variable
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    INTEGER         shift and go to state 49
    FLOAT           shift and go to state 46
    LPAREN          shift and go to state 47
    MINUS           shift and go to state 50
    ID              shift and go to state 44

    variable                       shift and go to state 48
    expr                           shift and go to state 45

state 18

    (43) command -> REM .

    NEWLINE         reduce using rule 43 (command -> REM .)


state 19

    (17) command -> PRINT . plist optend
    (24) command -> PRINT . error
    (28) command -> PRINT .
    (84) plist -> . plist COMMA pitem
    (85) plist -> . pitem
    (86) pitem -> . STRING
    (87) pitem -> . STRING expr
    (88) pitem -> . expr
    (57) expr -> . expr PLUS expr
    (58) expr -> . expr MINUS expr
    (59) expr -> . expr TIMES expr
    (60) expr -> . expr DIVIDE expr
    (61) expr -> . expr POWER expr
    (62) expr -> . INTEGER
    (63) expr -> . FLOAT
    (64) expr -> . variable
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    error           shift and go to state 54
    NEWLINE         reduce using rule 28 (command -> PRINT .)
    STRING          shift and go to state 52
    INTEGER         shift and go to state 49
    FLOAT           shift and go to state 46
    LPAREN          shift and go to state 47
    MINUS           shift and go to state 50
    ID              shift and go to state 44

    pitem                          shift and go to state 51
    expr                           shift and go to state 53
    plist                          shift and go to state 55
    variable                       shift and go to state 48

state 20

    (45) command -> DEF . ID LPAREN ID RPAREN EQUALS expr
    (46) command -> DEF . ID LPAREN ID RPAREN EQUALS error
    (47) command -> DEF . ID LPAREN error RPAREN EQUALS expr

    ID              shift and go to state 56


state 21

    (34) command -> FOR . ID EQUALS expr TO expr optstep
    (35) command -> FOR . ID EQUALS error TO expr optstep
    (36) command -> FOR . ID EQUALS expr TO error optstep
    (37) command -> FOR . ID EQUALS expr TO expr STEP error

    ID              shift and go to state 57


state 22

    (15) command -> DATA . numlist
    (16) command -> DATA . error
    (78) numlist -> . numlist COMMA number
    (79) numlist -> . number
    (80) number -> . INTEGER
    (81) number -> . FLOAT
    (82) number -> . MINUS INTEGER
    (83) number -> . MINUS FLOAT

    error           shift and go to state 60
    INTEGER         shift and go to state 61
    FLOAT           shift and go to state 58
    MINUS           shift and go to state 62

    number                         shift and go to state 59
    numlist                        shift and go to state 63

state 23

    (8) statement -> INTEGER NEWLINE .

    INTEGER         reduce using rule 8 (statement -> INTEGER NEWLINE .)
    RUN             reduce using rule 8 (statement -> INTEGER NEWLINE .)
    LIST            reduce using rule 8 (statement -> INTEGER NEWLINE .)
    NEW             reduce using rule 8 (statement -> INTEGER NEWLINE .)
    NEWLINE         reduce using rule 8 (statement -> INTEGER NEWLINE .)
    $end            reduce using rule 8 (statement -> INTEGER NEWLINE .)


state 24

    (21) command -> READDATA . variable EQUALS plist
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    ID              shift and go to state 44

    variable                       shift and go to state 64

state 25

    (40) command -> NEXT . ID
    (41) command -> NEXT . error

    ID              shift and go to state 66
    error           shift and go to state 65


state 26

    (4) statement -> INTEGER command . NEWLINE

    NEWLINE         shift and go to state 67


state 27

    (23) command -> CHECK . plist
    (84) plist -> . plist COMMA pitem
    (85) plist -> . pitem
    (86) pitem -> . STRING
    (87) pitem -> . STRING expr
    (88) pitem -> . expr
    (57) expr -> . expr PLUS expr
    (58) expr -> . expr MINUS expr
    (59) expr -> . expr TIMES expr
    (60) expr -> . expr DIVIDE expr
    (61) expr -> . expr POWER expr
    (62) expr -> . INTEGER
    (63) expr -> . FLOAT
    (64) expr -> . variable
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    STRING          shift and go to state 52
    INTEGER         shift and go to state 49
    FLOAT           shift and go to state 46
    LPAREN          shift and go to state 47
    MINUS           shift and go to state 50
    ID              shift and go to state 44

    pitem                          shift and go to state 51
    expr                           shift and go to state 53
    variable                       shift and go to state 48
    plist                          shift and go to state 68

state 28

    (18) command -> OUT . expr EQUALS plist
    (57) expr -> . expr PLUS expr
    (58) expr -> . expr MINUS expr
    (59) expr -> . expr TIMES expr
    (60) expr -> . expr DIVIDE expr
    (61) expr -> . expr POWER expr
    (62) expr -> . INTEGER
    (63) expr -> . FLOAT
    (64) expr -> . variable
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    INTEGER         shift and go to state 49
    FLOAT           shift and go to state 46
    LPAREN          shift and go to state 47
    MINUS           shift and go to state 50
    ID              shift and go to state 44

    variable                       shift and go to state 48
    expr                           shift and go to state 69

state 29

    (48) command -> GOSUB . INTEGER
    (49) command -> GOSUB . error

    INTEGER         shift and go to state 71
    error           shift and go to state 70


state 30

    (42) command -> END .

    NEWLINE         reduce using rule 42 (command -> END .)


state 31

    (29) command -> GOTO . INTEGER
    (30) command -> GOTO . error

    INTEGER         shift and go to state 72
    error           shift and go to state 73


state 32

    (22) command -> READSTR . variable EQUALS plist
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    ID              shift and go to state 44

    variable                       shift and go to state 74

state 33

    (31) command -> IF . relexpr THEN INTEGER
    (32) command -> IF . error THEN INTEGER
    (33) command -> IF . relexpr THEN error
    (67) relexpr -> . expr LT expr
    (68) relexpr -> . expr LE expr
    (69) relexpr -> . expr GT expr
    (70) relexpr -> . expr GE expr
    (71) relexpr -> . expr EQUALS expr
    (72) relexpr -> . expr NE expr
    (57) expr -> . expr PLUS expr
    (58) expr -> . expr MINUS expr
    (59) expr -> . expr TIMES expr
    (60) expr -> . expr DIVIDE expr
    (61) expr -> . expr POWER expr
    (62) expr -> . INTEGER
    (63) expr -> . FLOAT
    (64) expr -> . variable
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . MINUS expr
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    error           shift and go to state 77
    INTEGER         shift and go to state 49
    FLOAT           shift and go to state 46
    LPAREN          shift and go to state 47
    MINUS           shift and go to state 50
    ID              shift and go to state 44

    variable                       shift and go to state 48
    expr                           shift and go to state 76
    relexpr                        shift and go to state 75

state 34

    (11) command -> LET . variable EQUALS expr
    (12) command -> LET . variable EQUALS error
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    ID              shift and go to state 44

    variable                       shift and go to state 78

state 35

    (20) command -> LETSTR . variable EQUALS plist
    (73) variable -> . ID
    (74) variable -> . ID LPAREN expr RPAREN
    (75) variable -> . ID LPAREN expr COMMA expr RPAREN

    ID              shift and go to state 44

    variable                       shift and go to state 79

state 36

    (9) statement -> INTEGER error . NEWLINE

    NEWLINE         shift and go to state 80


state 37

    (54) dimlist -> dimitem .

    COMMA           reduce using rule 54 (dimlist -> dimitem .)
    NEWLINE         reduce using rule 54 (dimlist -> dimitem .)


state 38
